<?xml version="1.0" encoding="utf-8"?>

<base.ui.customviews.BottomSheetView
    android:id="@+id/map_options_bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:id="@+id/map_options_radiusSliderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:gravity="center"
            android:text="@string/map_options_radius_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/map_options_radiusSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:stepSize="@integer/map_options_radius_step"
            android:valueFrom="@string/map_options_radius_slider_from"
            android:valueTo="@string/map_options_radius_slider_to"
            android:value="@string/map_options_radius_slider_initial_value"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_options_radiusSliderText" />

        <TextView
            android:id="@+id/map_options_numberOfDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/common_margin"
            android:gravity="center"
            android:text="@string/map_options_days_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_options_radiusSlider" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/map_options_dayNumberSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="@integer/map_options_days_step"
            android:layout_margin="@dimen/common_margin"
            android:valueFrom="@string/map_options_dayNumber_value_from"
            app:values="@array/initial_day_range_slider_values"
            android:valueTo="@string/map_options_day_slider_value_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/map_options_numberOfDays" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</base.ui.customviews.BottomSheetView>
